syntax = "proto3";

option csharp_namespace = "RpcClient";

package wallet;

message Owner {
	string id = 1;
	string name = 2;
}

message CryptoType {
	string id = 1;
	string name = 2;
	string currencyValue = 3;
	string amount = 4;
}

message WalletRequest {
	string id = 1;
	Owner owner = 2;
	double balance = 3;
	repeated CryptoType cryptos = 4;
}

message WalletResponse {
	string id = 1;
	Owner owner = 2;
	double balance = 3;
	repeated CryptoType cryptos = 4;
}

message GetWalletRequest {
	string id = 1;
}

message GetWalletResponse {
	WalletResponse wallet = 1;
}

message CreateWalletRequest {
	WalletRequest wallet = 1;
}

message CreateWalletResponse {
	WalletResponse wallet = 1;
}

message AvailableCryptoType {
    string id = 1;
    string name = 2;
    string currencyValue = 3;
}

message ListAvailableCryptoTypesRequest {
}

message ListAvailableCryptoTypesResponse {
    repeated AvailableCryptoType cryptoTypes = 1;
}

service Wallet {
	rpc GetWallet(GetWalletRequest) returns (GetWalletResponse);
	rpc CreateWallet(CreateWalletRequest) returns (CreateWalletResponse);
    rpc ListAvailableCryptoTypes(ListAvailableCryptoTypesRequest) returns (ListAvailableCryptoTypesResponse); // Novo método
}